vault/bsc/probes/probe_continue_owned.expected.stderr
<probe>:11:13: error: memory leak of value: `p`
            continue;   // leaks p
            ^
1 error generated.
